add preview to sign up page

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -17,7 +17,10 @@
   <%= f.input :email %>
   <%= f.input :password, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
   <%= f.input :password_confirmation %>
-  <%= f.input :photo  %>
+  <div class="upload-preview">
+    <img class="avatar-large"/>
+  </div>
+  <%= f.input :photo, class: "file", name: "photo"  %>
   <%= f.input :photo_cache, as: :hidden  %>
 </div>
 
