--- a/app/views/shared_stories/new.html.erb
+++ b/app/views/shared_stories/new.html.erb
@@ -5,7 +5,7 @@
 
 <%= f.input :title %>
 <%= f.input :story %>
-
+ <%= f.collection_select :member_id, current_user.connections, :id, :title %>
 <%= f.submit %>
 
 <% end %>
