Only current user can share a story

--- a/app/views/shared_stories/index.html.erb
+++ b/app/views/shared_stories/index.html.erb
@@ -19,7 +19,9 @@
 <hr>
 
   <% end %>
+  <% if current_user %>
+     <%= link_to "Write a story", new_shared_story_path  %>
+  <% end %>
 
-  <%= link_to "Write a story", new_shared_story_path  %>
 
 </div>
