--- a/app/views/shared_stories/new.html.erb
+++ b/app/views/shared_stories/new.html.erb
@@ -10,10 +10,13 @@
     <%= f.input :title %>
     <%= f.input :story %>
     <%= f.collection_select :member_id, current_user.connections, :id, :title %>
+    <%#= select_tag "member_id", options_for_select(current_user.connections.map { |connection| [connection.title, connection.id, "data-img-src" => connection.full_picture] }), multiple: false, class: "avatar" %>
     <%= f.submit %>
 
     <% end %>
   </p>
 
 </div>
+
+
 
