Add link to sharedstories in navbar

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,6 +10,12 @@
     <!-- Different navigation if login or not -->
     <% if user_signed_in? %>
 
+     <div class="navbar-wagon-item navbar-wagon-link">
+      <%= link_to shared_stories_path() do%>
+      <i class="fa fa-paper-plane"></i>
+      <% end  %>
+    </div>
+
     <!-- Notification -->
     <div class="navbar-wagon-item navbar-wagon-link">
       <%= link_to dashboard_root_path() do%>
