fix minor bug in css

--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -31,9 +31,9 @@ $blue: #469AE0;
 $yellow: #FDB631;
 $orange: #FF5600;
 $green: #32B796;
-$dark-gray: #393939
-$light-blue: #00C7FD
-$ivory: #FFFFE2 
+$dark-gray: #393939;
+$light-blue: #00C7FD;
+$ivory: #FFFFE2;
 
 
 
