add style to post show map, remove empty js files as recommended by Cecile

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -66,118 +66,13 @@
 <% content_for(:after_js) do %>
 <%= javascript_tag do %>
 $(document).on('ready', function() {
-
-
-var mapStyle = [
-{
-  "featureType": "administrative",
-  "elementType": "labels.text.fill",
-  "stylers": [
-  {
-  "color": "#444444"
-}
-]
-},
-{
-  "featureType": "landscape",
-  "elementType": "all",
-  "stylers": [
-  {
-  "color": "#f2f2f2"
-}
-]
-},
-{
-  "featureType": "poi",
-  "elementType": "all",
-  "stylers": [
-  {
-  "visibility": "off"
-}
-]
-},
-{
-  "featureType": "road",
-  "elementType": "all",
-  "stylers": [
-  {
-  "saturation": -100
-},
-{
-  "lightness": 45
-}
-]
-},
-{
-  "featureType": "road.highway",
-  "elementType": "all",
-  "stylers": [
-  {
-  "visibility": "simplified"
-}
-]
-},
-{
-  "featureType": "road.highway",
-  "elementType": "geometry.fill",
-  "stylers": [
-  {
-  "visibility": "on"
-},
-{
-  "color": "#ff8700"
-}
-]
-},
-{
-  "featureType": "road.highway.controlled_access",
-  "elementType": "geometry.fill",
-  "stylers": [
-  {
-  "color": "#ff6a00"
-}
-]
-},
-{
-  "featureType": "road.arterial",
-  "elementType": "labels.icon",
-  "stylers": [
-  {
-  "visibility": "off"
-}
-]
-},
-{
-  "featureType": "transit",
-  "elementType": "all",
-  "stylers": [
-  {
-  "visibility": "off"
-}
-]
-},
-{
-  "featureType": "water",
-  "elementType": "all",
-  "stylers": [
-  {
-  "color": "#2db2e8"
-},
-{
-  "visibility": "on"
-}
-]
-}
-];
-
-
 handler = Gmaps.build('Google');
 handler.buildMap({
 internal: { id: 'map' },
 provider: {
 zoom: 8,
 center:   new google.maps.LatLng(52.3702, 4.8952),
-styles: mapStyle
+styles: window.mapStyle
 }
 },
 function(){
