--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,6 +7,7 @@
 @import "bootstrap";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+@import "image-picker";
 
 // Your CSS
 @import "layout/index";
@@ -16,6 +17,7 @@
 
 // Dashboard
 @import "dashboard.scss";
+
 
 // Linkjes zwart nu even hier, maar vergeet het niet zo weg te halen :)
 a {
