--- a/app/assets/stylesheets/components/_imagepicker.scss
+++ b/app/assets/stylesheets/components/_imagepicker.scss
@@ -1,8 +1,4 @@
-// .image_picker_image {
-//   border-radius: 50%;
-//    width: 300px;
-//    height: 300px;
-// }
+
 
 .thumbnail.selected{
 
@@ -10,12 +6,13 @@
   width: 60px;
   height: 60px;
   background-color: none;
-  background: none !important;
-  border: 1px solid red !important;
+  box-shadow: 0px 0px 0px 5px $orange;
 }
 
 
-ul.thumbnails.image_picker_selector li .thumbnail{
+ul.thumbnails.image_picker_selector li {
+  margin: 20px 12px 12px 0px;
+.thumbnail{
   border: none;
   width: 60px;
   height: 60px;
@@ -23,12 +20,15 @@ ul.thumbnails.image_picker_selector li .thumbnail{
   background: none !important;
   border-radius: 50%;
   padding: 0px;
+  margin: 10px;
+}
 }
 
 .thumbnail > img, .thumbnail a > img {
   max-width: 60px;
-  border-radius: 50%;
+  // border-radius: 50%;
   width: 60px;
   height: 60px;
 }
+
 
