format the maps, add color and boxshadow

--- a/app/assets/stylesheets/pages/_posts.scss
+++ b/app/assets/stylesheets/pages/_posts.scss
@@ -2,3 +2,13 @@
   background-image: url('https://images.unsplash.com/photo-1438183972690-6d4658e3290e?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=1317ea2f1e55d032e93afea068cb13ce');
   background-size: 150%;
 }
+
+.single_map {
+  box-shadow: 0px 4px 10px 2px rgba(0,0,0,0.75);
+
+}
+
+.dynamic_map {
+  box-shadow: 0px 4px 10px 2px rgba(0,0,0,0.75);
+  margin-bottom: 50px;
+}
