--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -59,7 +59,7 @@
   </div>
 </div>
 
-<div id="map" style="width: 100%; height: 400px;"></div>
+<div id="map" class="dynamic_map text-center" style="width: 75%; height: 400px;"></div>
 
 
 <!-- This is the code for the map -->
