--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,16 +9,13 @@
     <div class="card-description">
       <p><%= @post.content %></p>
       <% if @post.button_valid?(current_user) %>
-        <p><%= link_to "Write a request to this Post", new_post_request_path(@post), class: "make btn btn-success" %></p>
-        <% end %>
+      <p><%= link_to "Write a request to this Post", new_post_request_path(@post), class: "make btn btn-success" %></p>
+      <% end %>
       <p><%= link_to 'Back to overview', posts_path %></p>
-      <div id="post_map" style="width: 300px; height: 300px";></div>
-
     </div>
-
-
-
   </div>
+
+  <div id="post_map" class ="single_map text-center" style="width: 400px; height: 400px;";></div>
 
 </div>
 <!-- This is the code for the map -->
@@ -39,9 +36,9 @@
       icon: {
         path: google.maps.SymbolPath.CIRCLE,
         fillOpacity: 0.7,
-        fillColor: '#5F9CCE',
+        fillColor: '#00C7FD',
         strokeOpacity: 1.0,
-        strokeColor: '#5F9CCE',
+        strokeColor: '#00C7FD',
         strokeWeight: 3.0,
         scale: 40 //pixels
       }
