--- a/app/views/dashboard/_sent_request.html.erb
+++ b/app/views/dashboard/_sent_request.html.erb
@@ -1,20 +1,21 @@
 <div class="dashboard-card left-card">
-          <div class="subject">reaction to: <%=link_to request.post.subject, post_path(request.post) %></div>
-          <%= request.message %>
-          <br>
-          <%= link_to "chatti chatti!",
-          post_request_chat_messages_path(request.post, request) %>
-          <br> <br>
+  <div class="subject">reaction to: <%=link_to request.post.subject, post_path(request.post) %></div>
+  <%= request.message %>
+  <br>
+  <br> <br>
 
-            <!-- Show status of request -->
-            <% if request.status == "pending" %>
-             <div class="label label-warning"><%= request.post.author.title %> didn't respond yet!</div>
-            <% elsif request.status == "accepted" %>
-              <div class="label label-success">You are a match with <%= request.post.author.title %> </div>
-            <% elsif request.status == "declined" %>
-              <div class="label label-danger"><%= request.post.author.title %> declined your request</div>
-            <% else %>
-              <div class="wrong">Something went wrong</div>
-            <% end %> <br> <br>
-            <div class="created-at"> updated at <%= request.updated_at.strftime("%c") %></div> <br>
-            </div>
+  <!-- Show status of request -->
+  <% if request.status == "pending" %>
+  <div class="label label-warning"><%= request.post.author.title %> didn't respond yet!</div>
+  <% elsif request.status == "accepted" %>
+  <div class="label label-success">You are a match with <%= request.post.author.title %> </div>
+  <br>
+  <%= link_to "Chat with him/her!",
+  post_request_chat_messages_path(request.post, request) %>
+  <% elsif request.status == "declined" %>
+  <div class="label label-danger"><%= request.post.author.title %> declined your request</div>
+  <% else %>
+  <div class="wrong">Something went wrong</div>
+  <% end %> <br> <br>
+  <div class="created-at"> updated at <%= request.updated_at.strftime("%c") %></div> <br>
+</div>
