--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -6,10 +6,9 @@
 
 .card {
   flex: 0 0 20%;
-  background: rgba(195, 195, 195, 0.3 );
-  color: $green;
+  background: $light-blue;
   position: relative;
-  height: 330px;
+  height: 360px;
   width: 530px;
   margin: 10px;
   padding: 15px;
