--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -38,11 +38,15 @@
             <div class="col-xs-12 col-sm-6">
               <div class= "card">
                 <div class="card-title"><h2><%= link_to post.subject, post_path(post) %></h2> </div>
-                <p><%= post.updated_at.strftime("%d-%m-%Y %H:%M:%S") %></p>
-                <p><%= link_to post.author.title, user_path(post.author) %></p>
+                <p><%= link_to post.author.title, user_path(post.author) %>
+                  <i> <%= time_ago_in_words(post.created_at) %> ago</i>
+                </p>
 
                 <div class="card-description">
-                  <p><%= post.content %></p>
+                <p><%=h truncate(post.content, :length => 150) %></p>
+                  <% if post.content.length > 150 %>
+                  <p class="read_more_button"> <%= link_to "Read more", post_path(post) %></p>
+                  <% end  %>
                   <% if post.button_valid?(current_user) %>
                   <p><%= link_to "Write a request to this Post", new_post_request_path(post), class: "make btn btn-success" %></p>
                   <% end %>
