--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,7 +12,7 @@
     <div class="card-description">
       <p><%= @post.content %></p>
       <% if @post.button_valid?(current_user) %>
-      <p><%= link_to "Write aA request to this Post", new_post_request_path(@post), class: "make btn btn-success" %></p>
+      <p><%= link_to "Write a request to this Post", new_post_request_path(@post), class: "make btn btn-success" %></p>
       <% end %>
       <p><%= link_to 'Back to overview', posts_path %></p>
       <div id="post_map" style="width: 300px; height: 300px";></div>
