--- a/app/assets/stylesheets/pages/_chat.scss
+++ b/app/assets/stylesheets/pages/_chat.scss
@@ -1,16 +1,20 @@
-ul
-{
-  list-style-type: none;
+.chatbox {
+  text-align: center;
+  max-width: 800px;
+  margin: 100px auto;
+  background-color: $light-blue;
+  padding: 80px;
+  font-family: "Open Sans";
 }
 
 
-
-
-
+ul{
+  list-style: none;
+  width: 700px;
+}
 
 .chat {
   display: flex;
-  list-style: none;
   background: none;
   margin: 0;
   padding: 0 0 50px 0;
@@ -19,44 +23,72 @@ ul
 }
 
 .chat li {
-  padding: 0.5rem;
-  overflow: hidden;
   display: flex;
-  position: relative;
+}
+
+.you {
+    justify-content: flex-end;
+    align-items: flex-end;
+    text-align: right;
+}
+
+
+.other{
+  text-align: left;
 }
 
 .msg {
   background: white;
   min-width: 50px;
+  max-width: 350px;
   padding: 10px;
   border-radius: 2px;
   box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.07);
+  margin-bottom: 10px;
 }
 
-.msg p {
-  font-size: 0.8rem;
-  margin: 0 0 0.2rem 0;
-  color: #777;
-}
+// .msg p {
+//   font-size: 0.8rem;
+//   margin: 0 0 0.2rem 0;
+//   color: #777;
+// }
 
 
-.other .msg {
+/* .other {
   border-top-left-radius: 0px;
   box-shadow: -1px 2px 0px #D4D4D4;
 }
+ */
 
-.you {
-  align-items: flex-end;
-  display: -webkit-flex;
-  -webkit-flex-direction: column;
-  flex-direction: column;
-  -webkit-align-items: flex-end;
-
-
-}
-
-.you .msg {
+/* .you .msg {
 
   border-bottom-right-radius: 0px;
   box-shadow: 1px 2px 0px #D4D4D4;
+} */
+
+
+.msg .bubble-right:after{
+  z-index: 9002;
+display: block;
+content: "";
+position:absolute;
+bottom:-12px;
+right: 0;
+border-top: 0 #efefef solid;
+border-bottom: 12px transparent solid;
+border-right: 20px  #efefef solid;
 }
+
+
+.msg .bubble-left:after{
+z-index: 9002;
+display: block;
+content: "";
+position:absolute;
+bottom:-12px;
+left: 0;
+border-top: 0 #efefef solid;
+border-bottom: 12px transparent solid;
+border-left: 20px  #efefef solid;
+}
+
