--- a/app/assets/stylesheets/pages/_chat.scss
+++ b/app/assets/stylesheets/pages/_chat.scss
@@ -47,6 +47,14 @@ ul{
   margin-bottom: 10px;
 }
 
+
+.yousender{
+  color: $orange;
+}
+
+.hesender{
+  color: $blue;
+}
 // .msg p {
 //   font-size: 0.8rem;
 //   margin: 0 0 0.2rem 0;
