--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -13,10 +13,12 @@
   margin: 10px;
   padding: 15px;
   box-shadow: 1px 1px 5px 2px rgba(0,0,0,0.75);
+  font-family: $base-font;
 }
 
 .card-title {
   text-align: center;
+  font-family: $header-font;
 }
 
 .card-link {
