add custom buttons to forms

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -143,3 +143,20 @@
     height: 1px;
   }
 }
+
+
+
+
+.form-button {
+  margin: 10px;
+  border: 2px $dark-gray;
+  background-color: $orange;
+  transition: background-color 0.4s, color 0.4s ease;
+  padding: 10px;
+  font-family: $base-font;
+  color: white;
+  &:hover {
+    background-color: $dark-gray;
+    color: white;
+  }
+}
