--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,3 +1,24 @@
+/* Fills on hover
+hvr-sweep-to-right btn-orange
+hvr-sweep-to-right btn-blue
+hvr-sweep-to-right btn-black
+
+filled and on hover underline (no fill)
+hvr-underline-from-center btn-border-blue
+hvr-underline-from-center btn-border-orange
+hvr-underline-from-center btn-border-black
+
+Simple: text and on hover underlined with effect
+hvr-underline-from-center btn-simple-blue
+hvr-underline-from-center ban-simple-orange
+hvr-underline-from-center btn-simple-black
+
+Changes from filled in color to filled in black
+btn btn-orange-black
+btn btn-blue-black
+*/
+
+
 .btn-orange {
   padding: 10px;
   border: 2px solid $orange;
