--- a/app/assets/stylesheets/pages/_chat.scss
+++ b/app/assets/stylesheets/pages/_chat.scss
@@ -1,3 +1,8 @@
+.container{
+  text-align: center;
+  padding-bottom: 100px;
+}
+
 .chatbox {
   text-align: center;
   max-width: 800px;
@@ -45,6 +50,8 @@ ul{
   border-radius: 2px;
   box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.07);
   margin-bottom: 10px;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
 
 
@@ -62,4 +69,12 @@ ul{
   margin-top: 3px;
   cursor: default;
 
+}
+
+.textinput{
+  border-style: none;
+}
+
+.submit{
+  float: right;
 }
