--- a/app/assets/stylesheets/pages/_chat.scss
+++ b/app/assets/stylesheets/pages/_chat.scss
@@ -19,10 +19,12 @@ ul{
 }
 
 .chat {
+  overflow: auto;
+  height: 80vh;
   display: flex;
   background: none;
   margin: 0;
-  padding: 0 0 50px 0;
+  padding: 0 15 50px 0;
   margin-top: 60px;
   margin-bottom: 10px;
 }
