--- a/app/views/devise/shared/_facebook_login.html.erb
+++ b/app/views/devise/shared/_facebook_login.html.erb
@@ -1,5 +1,9 @@
 <%- if devise_mapping.omniauthable? %>
 <%- resource_class.omniauth_providers.each do |provider| %>
-<%= link_to "sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), class: "facebook-button" %><br />
+<%= link_to omniauth_authorize_path(resource_name, provider) do %>
+<div class="facebook-button">
+  <%= "sign in with #{OmniAuth::Utils.camelize(provider)}"  %>
+</div> 
+<% end  %>
 <% end -%>
 <% end  %>
