fix the text center problem in forms

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -4,12 +4,12 @@
 }
 
 .form {
-
   max-width: 550px;
   margin: 100px auto;
   background-color: $light-blue;
   padding: 40px 80px;
   font-family: "Open Sans";
+  text-align: center;
 }
 
 .form-title {
