add destroy dependent

--- a/app/views/chat_messages/index.html.erb
+++ b/app/views/chat_messages/index.html.erb
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <div class="container">
     <div class="chatbox">
-      <h1 class= "form-title">Your Chat</h1>
+      <h1 class= "form-title">Your Chat with</h1>
 
 <div class="chat">
   <ul>
