--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,4 @@
-<div class="wrapper">
-
+<div class="wrapper-profile">
 <div class="profile-body">
 <div class="container">
   <div class="row">
@@ -28,16 +27,24 @@
       <div class="col-xs-12 col-sm-6 ">
         <div class="profile-stories">
         <h3 class="profile-underline-blue"><span class="profile-title"> Latest stories with <%= @user.title %></span></h3>
-          <% @user.shared_stories.take(5).each do |story|%>
-          <%= link_to story.title, shared_stories_path(story) %> <br>
+          <% if @user.shared_stories.length == 0 %>
+            This user doesn't have any stories yet.
+          <% else %>
+            <% @user.shared_stories.take(5).each do |story|%>
+            <%= link_to story.title, shared_stories_path(story) %> <br>
+            <% end %>
           <% end %>
     </div>
       </div>
       <div class=" col-xs-12 col-sm-6">
          <div class="profile-posts">
        <h3 class="profile-underline"><span class="profile-title"> Latest posts from <%= @user.title %></span></h3>
-      <% @user.posts.take(5).each do |post|%>
-      <%= link_to post.subject, posts_path(post) %> <br>
+       <% if @user.posts.length == 0 %>
+         This user hasn't written any posts yet.
+      <% else %>
+        <% @user.posts.take(5).each do |post|%>
+        <%= link_to post.subject, posts_path(post) %> <br>
+       <% end %>
       <% end %>
     </div>
       </div>
