--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,51 +1,16 @@
-<div class="banner homie" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), ;">
-  <div class="banner-content">
-    <h1>RefuGapp</h1>
-    <p>Fill the gap between Locals and refugees by sharing skills.</p>
+    <div class="top-div">
+    </div>
+    <%= image_tag "skew.png", width: "100%"  %>
 
-    <%= link_to "CONNECT", new_user_registration_path, class:"btn btn-warning btn-lg"%>
-  </div>
-</div>
+    <div class="center-div">
+      <%=image_tag "refuGapp.png", width: '35%'  %>
+      <p>Fill the gap between Locals and refugees by sharing skills.</p>
+      <%= link_to "CONNECT", new_user_registration_path, class:"btn btn-warning btn-lg"%>
+    </div>
 
-<div class="banner about">
-  <div class="banner-content">
+
     <h1>ABOUT</h1>
     <p> We all are blessed with a lot of skills. Why not connect with the people around us by exchanging them? With RefuGapp we are filling the gap between locals and newcomers by providing a platform where you can offer your offer and find skill and connect with new people! </p>
     <p>Are you a Local? Get to now the newcomers in your city by exchanging skills! Discover how refugees can help you,m sen da request and.. connect! Or: a skill you want to share? Make a post and someone will find you!</p>
     <p>Are you a newcomer? Get to know the locals by offering your skills! Make a post and help a local with the things you are good at.
       Or: in need of some help? Look what the locals are offering and send a request!</p>
-    </div>
-  </div>
-
-  <div class="banner posts" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), ;">
-    <div class="banner-content">
-      <h1>POSTS</h1>
-      <div class="card-wrapper">
-        <div class="container">
-          <div class="row">
-            <% @posties.first(6).each do |post| %>
-            <div class="col-xs-12 col-sm-6">
-              <div class= "card">
-                <div class="card-title"><h2><%= link_to post.subject, post_path(post) %></h2> </div>
-                <i> <%= time_ago_in_words(post.created_at) %> ago</i>
-                <p><%= User.find(post.author_id).username %></p>
-                <div class="card-description">
-                  <p><%= truncate(post.content, :length => 150) %></p>
-                  <% if post.content.length > 150 %>
-                  <p class="read_more_button"> <%= link_to "Read more", post_path(post) %></p>
-                  <% end  %>
-                  <% if post.button_valid?(current_user) %>
-                  <p><%= link_to "Write a request to this Post", new_post_request_path(post), class: "make btn btn-success" %></p>
-                  <% end %>
-                </div>
-              </div>
-            </div>
-
-            <% end %>
-          </div>
-        </div>
-      </div>
-      <%= link_to "SEE ALL POSTS", posts_path(), class:"btn btn-danger btn-lg" %>
-    </div>
-
-  </div>
