--- a/app/views/chat_messages/index.html.erb
+++ b/app/views/chat_messages/index.html.erb
@@ -1,7 +1,9 @@
 <div class="wrapper">
   <div class="container">
     <div class="chatbox">
-      <h1 class= "form-title">Your Chat with</h1>
+      <h1 class= "form-title">Your Chat with
+      <%= User.find(@chat_messages.select{ |x| x.user_id != current_user.id}.first.user_id).title  %>
+      </h1>
 
 <div class="chat">
   <ul>
