--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,18 +20,16 @@
         <%= f.input :password, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
         <%= f.input :password_confirmation %>
         <div class="upload-preview">
-          <img class="avatar-large"/>
+          <img class="hidden photo-preview preview-image"/>
         </div>
-        <%= f.input :photo, class: "file", name: "photo"  %>
+
+        <div class="input-file-container">         
+          <%= f.input :photo, input_html: {class: "file input-file hidden"}, name: "photo"  %>
+          <label for="my-file" class="input-file-trigger btn form-button" tabindex="0">select picture</label>
+        </div>
         <%= f.input :photo_cache, as: :hidden  %>
+        <%= f.submit class: "form-button", value: "SIGN UP" %>
+        <% end %>
       </div>
-
-      <div class="form-actions">
-        <%= f.button :submit, "Sign up", class: "form-button" %>
-      </div>
-      <% end %>
-
-      <%= render "devise/shared/links" %>
-    </div>
   </div>
 </div>
