--- a/app/assets/stylesheets/pages/_shared_stories.scss
+++ b/app/assets/stylesheets/pages/_shared_stories.scss
@@ -7,10 +7,12 @@
 
 .stories-card {
   background-color: white;
-  border: 2px solid $orange;
+  border: 4px solid $orange;
   padding: 40px;
   margin: 20px 0px;
-  min-height: 300px;
+  min-height: 372px;
+  position: relative;
+
 }
 
 .stories-title {
@@ -40,4 +42,9 @@
 .stories-center {
   text-align: center;
   margin: auto;
+}
+
+.stories-images {
+  position: absolute;
+  bottom: 30px;
 }
